fix: replace tcp with raw

--- a/config_client_template.json
+++ b/config_client_template.json
@@ -40,7 +40,7 @@
 				]
 			},
 			"streamSettings": {
-				"network": "tcp",
+				"network": "raw",
 				"security": "reality",
 				"realitySettings": {
 					"fingerprint": "chrome",
